--- a/src/app/score/score-list/score-list-responsive/score-list-responsive.component.html
+++ b/src/app/score/score-list/score-list-responsive/score-list-responsive.component.html
@@ -5,7 +5,7 @@
     [itemsPerPageOptions]="itemsPerPageOptions()"
     [paginationMeta]="paginationMeta()"
     [title]="title()"
-    [collapsable]="collapsable"
+    [collapsable]="collapsable()"
     [disabledProperty]="disabledProperty()"
     (currentPageChange)="currentPageChange.emit($event)"
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
@@ -22,7 +22,7 @@
     [metadata]="metadata()"
     [itemsPerPageOptions]="itemsPerPageOptions()"
     [paginationMeta]="paginationMeta()"
-    [collapsable]="collapsable"
+    [collapsable]="collapsable()"
     (currentPageChange)="currentPageChange.emit($event)"
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
     (orderChange)="orderChange.emit($event)"
