--- a/src/app/shared/components/datepicker/datepicker/datepicker.component.html
+++ b/src/app/shared/components/datepicker/datepicker/datepicker.component.html
@@ -4,9 +4,9 @@
     @scaleIn
     (@fadeInOut.done)="onFadeDone($event)"
     cdkTrapFocus
-    [(value)]="value()"
+    [(value)]="value"
     (valueChange)="onValueChange($event)"
-    [(viewMode)]="viewMode()"
+    [(viewMode)]="viewMode"
     [disabled]="disabled"
     [locale]="locale()"
   />
