--- a/src/app/shared/components/table/table-cell/table-cell.component.html
+++ b/src/app/shared/components/table/table-cell/table-cell.component.html
@@ -5,8 +5,8 @@
       [ngTemplateOutletContext]="{ item: item(), colDef: colDef() }"
     />
   } @else {
+    @let value = item()[colDef().property] | tableCellFormatter: colDef().formatter;
     <span
-      *ngLet="item()[colDef().property] | tableCellFormatter: colDef().formatter as value"
       [bioTooltip]="item() | tableCellTooltip: colDef().tooltip : value"
       [bioTooltipPosition]="colDef().tooltipPosition"
       [bioTooltipDisabled]="!colDef().tooltip"
