--- a/src/app/admin/admin-ban-user/admin-ban-user.component.html
+++ b/src/app/admin/admin-ban-user/admin-ban-user.component.html
@@ -20,10 +20,10 @@
     }
     <bio-card-content>
       <bio-list selectable>
-        @if (!users?.length) {
+        @if (!users.length) {
           <bio-list-item>No data found</bio-list-item>
         }
-        @for (user of users; track trackById($index, user)) {
+        @for (user of users; track user.id) {
           <bio-list-item
             [disabled]="user.disabled"
             [bioTooltip]="user.tooltip"
