--- a/src/app/forum/forum-categories/forum-categories.component.html
+++ b/src/app/forum/forum-categories/forum-categories.component.html
@@ -1,4 +1,5 @@
-<ng-container *ngLet="isAdmin$ | async as isAdmin">
+@let isAdmin = isAdmin$ | async;
+<ng-container>
   @if (isAdmin) {
     <div class="actions">
       <bio-checkbox [(checked)]="hideDeleted" [disabled]="hasNoneDeleted$ | async">Hide deleted</bio-checkbox>
@@ -36,7 +37,7 @@
           </div>
           <bio-forum-categories-category
             [category]="category"
-            [isAdmin]="isAdmin"
+            [isAdmin]="!!isAdmin"
             [loadingAddEditModal]="loadingAddEditModal"
             [isMobile]="isMobile$ | asyncDefault: false"
             [idCategoriesDropList]="idCategories$ | asyncDefault: []"
