--- a/src/app/notification/notifications-icon/notifications-icon.component.html
+++ b/src/app/notification/notifications-icon/notifications-icon.component.html
@@ -1,4 +1,5 @@
-<ng-container *ngLet="unseenCount$ | async as unseenCount">
+@let unseenCount = unseenCount$ | async;
+<ng-container>
   <button
     bioButton
     icon
