--- a/src/app/player/player-profile/player-profile.component.scss
+++ b/src/app/player/player-profile/player-profile.component.scss
@@ -1,4 +1,5 @@
 @use 'variables' as v;
+@use 'sass:color';
 
 :host {
   > * {
@@ -37,7 +38,7 @@
     align-items: center;
     transform: translateY(100%);
     transition: transform 200ms ease;
-    background-color: transparentize(v.$primary-500, 0.25);
+    background-color: color.adjust(v.$primary-500, $alpha: -0.25, $space: hsl);
     border-radius: inherit;
   }
 
