--- a/src/app/shared/url-preview/url-preview.component.html
+++ b/src/app/shared/url-preview/url-preview.component.html
@@ -1,4 +1,5 @@
-<ng-container *ngLet="urlMetadata$ | async as urlMetadata">
+@let urlMetadata = urlMetadata$ | async;
+<ng-container>
   @if (!loading && urlMetadata) {
     @if (urlMetadata.image) {
       <img class="img" [src]="urlMetadata.image" [alt]="urlMetadata.title" />
