fix: change dicebear api fix: datepicker icon should be a button of type button

--- a/src/app/score/score-add/score-add.component.html
+++ b/src/app/score/score-add/score-add.component.html
@@ -74,7 +74,7 @@
             [bioDatepicker]="datepicker"
             placeholder="Achieved date"
           />
-          <button bioButton icon bioSuffix [bioDatepickerTrigger]="datepicker">
+          <button type="button" bioButton icon bioSuffix [bioDatepickerTrigger]="datepicker">
             <bio-icon>calendar_today</bio-icon>
           </button>
           <bio-datepicker #datepicker></bio-datepicker>
